--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="btn_reg">#38A808</color>
     <color name="btn_login">#2196F3</color>
     <color name="bg_color">#2196F3</color>
+    <color name="bg_color1">#9C27B0</color>
 </resources>
